tests/sources/invalid/classes/constructor_and_type_method_call_errors.fire
// Errors for `new`-constructed instances and Type.method(...) call forms.

import @firescript/std.io.println;

class Plain {
    v: int32;
}

class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }

    fn twice(&this) -> int32 {
        return this.v * 2;
    }

    static fn bar(x: int32) -> int32 {
        return x;
    }
}

// No explicit constructor defined for Plain: `new` form requires one
p: Plain = new Plain();  //~ ERROR FS-SEM-0010 @16

// Wrong argument count for `new` constructor
f1: Foo = new Foo(1, 2);  //~ ERROR FS-SEM-0010 @15

// Wrong argument type for `new` constructor
f2: Foo = new Foo("nope");  //~ ERROR FS-SEM-0010 @19

// Unknown static/constructor method on a type
u: int32 = Foo.doesNotExist(1);  //~ ERROR FS-SEM-0010 @16

// Instance method invoked in type-call form: neither static nor constructor
t: int32 = Foo.twice(1);  //~ ERROR FS-SEM-0010 @16

// Wrong argument count for a static method call
s1: int32 = Foo.bar(1, 2);  //~ ERROR FS-SEM-0010 @17

// Wrong argument type for a static method call
s2: int32 = Foo.bar("nope");  //~ ERROR FS-SEM-0010 @21
